parslers-benchmark/src/tests/valid/pairs/printNullPair.wacc
# print pair a null pair

# Output:
# (nil)

# Program:

begin
  pair(pair, pair) p = null ;
  println p
end
