parslers-benchmark/src/tests/invalid/semanticErr/pairsExtended/invalidPairAssignment.wacc
# checks for invalid type assignments in pairs.

begin
    pair(int, pair(int, int)) a = null;
    pair(int, int) b = a
end